[gd_scene load_steps=29 format=3 uid="uid://bbpr3f42wv3f4"]

[ext_resource type="Theme" uid="uid://icpcatdn87hq" path="res://Assets/Themes/theme.tres" id="1_2x5wo"]
[ext_resource type="Script" path="res://Assets/InventoryMenuManager.gd" id="1_jin5a"]
[ext_resource type="Script" path="res://Scripts/Inventory/InventoryManager.gd" id="1_vihhl"]
[ext_resource type="Shader" path="res://Assets/Shaders/halftone.gdshader" id="3_0yrly"]
[ext_resource type="Shader" path="res://Assets/Shaders/paintbrush_wipe.gdshader" id="3_v8qdp"]
[ext_resource type="Texture2D" uid="uid://dy7cknaaqn1kb" path="res://Assets/Shaders/Texturelabs_InkPaint_402M.png" id="3_wvxl4"]
[ext_resource type="Texture2D" uid="uid://kv6kaw4avsje" path="res://Assets/Shaders/noise/noise1_template.tres" id="4_uhky1"]
[ext_resource type="Texture2D" uid="uid://bvkqv6dlnfuca" path="res://Assets/Shaders/noise/noise2_template.tres" id="5_joy1i"]
[ext_resource type="Texture2D" uid="uid://dco1iuwhb6w86" path="res://Assets/Shaders/Texturelabs_InkPaint_384M.png" id="6_cguuw"]
[ext_resource type="FontFile" uid="uid://kpfebmk4gx8d" path="res://Assets/Fonts/Expose-Regular.otf" id="8_6w75r"]
[ext_resource type="Shader" path="res://Assets/Shaders/luminance_colour.gdshader" id="8_e1llg"]
[ext_resource type="AudioStream" uid="uid://cykbduoubldex" path="res://Assets/Sounds/softclick.ogg" id="8_f5eor"]
[ext_resource type="LabelSettings" uid="uid://v0m6ms4lq5wv" path="res://Assets/Themes/info_label_settings.tres" id="8_u0fe3"]
[ext_resource type="AudioStream" uid="uid://blleegjqv1fky" path="res://Assets/Sounds/denied.wav" id="9_rp5ee"]
[ext_resource type="AudioStream" uid="uid://eqtm4k61d0bg" path="res://Assets/Sounds/heal.wav" id="10_4dulq"]

[sub_resource type="Gradient" id="Gradient_d8txa"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6cfnw"]
gradient = SubResource("Gradient_d8txa")
fill = 1
fill_from = Vector2(0, 1)
fill_to = Vector2(0.55, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uk8eg"]
shader = ExtResource("3_0yrly")
shader_parameter/size = 64
shader_parameter/dot_size = 1.25
shader_parameter/value_multiplier = 2.0
shader_parameter/invert = false
shader_parameter/gradient_texture = SubResource("GradientTexture2D_6cfnw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_napwb"]
shader = ExtResource("3_v8qdp")
shader_parameter/progress = 1.0
shader_parameter/horizontal = true
shader_parameter/luminance_based_colouring = true
shader_parameter/invert_luminance = true
shader_parameter/target_color = Color(0.92757, 0.31587, 0.770021, 1)
shader_parameter/desired_alpha = 1.0
shader_parameter/gradient_enabled = false
shader_parameter/flip_wipe_direction = false
shader_parameter/noise1 = ExtResource("4_uhky1")
shader_parameter/noise2 = ExtResource("5_joy1i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6tso5"]
shader = ExtResource("3_v8qdp")
shader_parameter/progress = 1.0
shader_parameter/horizontal = true
shader_parameter/luminance_based_colouring = true
shader_parameter/invert_luminance = true
shader_parameter/target_color = Color(0.996078, 1, 0.262745, 1)
shader_parameter/desired_alpha = 1.0
shader_parameter/gradient_enabled = false
shader_parameter/flip_wipe_direction = false
shader_parameter/noise1 = ExtResource("4_uhky1")
shader_parameter/noise2 = ExtResource("5_joy1i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aqb8l"]
shader = ExtResource("8_e1llg")
shader_parameter/target_color = Color(0.223529, 1, 1, 1)
shader_parameter/invert_luminance = true
shader_parameter/gradient_enabled = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_suspb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vybim"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vuqwm"]

[sub_resource type="LabelSettings" id="LabelSettings_lhktw"]
font = ExtResource("8_6w75r")
font_size = 84
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3wvcj"]
font = ExtResource("8_6w75r")
font_size = 84
font_color = Color(0.988235, 0.92549, 0.317647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4ftp"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.976471, 0.929412, 1)
border_color = Color(0.286275, 1, 0.72549, 1)
corner_radius_top_right = 1024
corner_radius_bottom_left = 1024
corner_detail = 1
expand_margin_left = 200.0
expand_margin_right = 300.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2jnj"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.286275, 1, 0.72549, 1)
corner_radius_top_right = 1024
corner_radius_bottom_left = 1024
corner_detail = 1
expand_margin_left = 200.0
expand_margin_right = 300.0
shadow_color = Color(0.286275, 1, 0.72549, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_vihhl")

[node name="InventoryUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jin5a")

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
material = SubResource("ShaderMaterial_uk8eg")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -398.0
offset_right = 416.0
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="InventoryBackgroundPaint" type="TextureRect" parent="InventoryUI"]
z_index = -2
material = SubResource("ShaderMaterial_napwb")
layout_mode = 0
offset_left = -328.0
offset_top = 832.0
offset_right = 1043.0
offset_bottom = 1595.0
rotation = -1.11701
texture = ExtResource("3_wvxl4")
expand_mode = 5
flip_h = true

[node name="InventoryBackgroundPaint2" type="TextureRect" parent="InventoryUI"]
z_index = -2
material = SubResource("ShaderMaterial_6tso5")
layout_mode = 2
offset_left = -89.0
offset_top = -819.0
offset_right = 1876.0
offset_bottom = 462.0
rotation = 0.860883
texture = ExtResource("6_cguuw")

[node name="ModeSelectBackground" type="TextureRect" parent="InventoryUI"]
material = SubResource("ShaderMaterial_aqb8l")
layout_mode = 2
offset_left = 80.0
offset_top = 32.0
offset_right = 366.0
offset_bottom = 170.0
rotation = -0.0763745
texture = ExtResource("6_cguuw")
expand_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="InventoryUI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 206.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_suspb")

[node name="TextureRect" type="TextureRect" parent="InventoryUI/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="InventoryPanelContainer" type="PanelContainer" parent="InventoryUI/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vybim")

[node name="MarginContainer" type="MarginContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 144
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 54
alignment = 1

[node name="TitlePanelContainer" type="PanelContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vuqwm")

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/TitlePanelContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="StockLabel" type="Label" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/TitlePanelContainer/HBoxContainer"]
layout_mode = 2
text = "STOCK"
label_settings = SubResource("LabelSettings_lhktw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpecialLabel" type="Label" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/TitlePanelContainer/HBoxContainer"]
layout_mode = 2
text = "SPECIAL"
label_settings = SubResource("LabelSettings_3wvcj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 36
alignment = 1

[node name="InventoryElements" type="VBoxContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="InfoBox" type="VBoxContainer" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="InfoTitle" type="Label" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/InfoBox"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_2x5wo")
theme_type_variation = &"TipLabel"
theme_override_font_sizes/font_size = 18
text = "INFO"
horizontal_alignment = 1

[node name="ItemDescription" type="Label" parent="InventoryUI/PanelContainer/MarginContainer/InventoryPanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/InfoBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_2x5wo")
text = "Deals massive WIND dmg
to a single enemy.Lorem Ipsum
Lorem Ipsum
Lorem IpsumLorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum
Lorem Ipsum"
label_settings = ExtResource("8_u0fe3")
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 4

[node name="SelectPanelShadow" type="Panel" parent="InventoryUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = -290.0
offset_bottom = -312.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g4ftp")

[node name="SelectPanel" type="Panel" parent="InventoryUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -16.0
offset_right = -42.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x2jnj")

[node name="hover_sound" type="AudioStreamPlayer" parent="InventoryUI"]
stream = ExtResource("8_f5eor")

[node name="click_sound" type="AudioStreamPlayer" parent="InventoryUI"]
stream = ExtResource("8_f5eor")

[node name="denied_sound" type="AudioStreamPlayer" parent="InventoryUI"]
stream = ExtResource("9_rp5ee")
volume_db = -12.0

[node name="inventory_use_sound" type="AudioStreamPlayer" parent="InventoryUI"]
stream = ExtResource("10_4dulq")
